[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://art/player.png" type="Texture" id=2]
[ext_resource path="res://sounds/Death.ogg" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 11.1427, 25.6906 )

[node name="Player" type="KinematicBody2D" index="0"]

position = Vector2( 224, 191.806 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 0.193726, 6.58618 )
shape = SubResource( 1 )

[node name="DeathSound" type="AudioStreamPlayer" parent="." index="2"]

stream = ExtResource( 3 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="ResponTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[connection signal="timeout" from="ResponTimer" to="." method="_on_ResponTimer_timeout"]


